Bug 17846 - konqueror link information does not disappear
Summary: konqueror link information does not disappear
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: unspecified
Platform: unspecified Other
: NOR minor
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2000-12-30 01:03 UTC by npapadon
Modified: 2006-12-29 19:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description npapadon 2000-12-30 01:00:13 UTC
(*** This bug was imported into bugs.kde.org ***)

Package: konqueror
Version: 12/29/2000 cvs
Severity: normal
Installed from: src

1) Open a webpage in Konqueror
   
2) Scroll the page so a LINK is adjacent to a border of 
the webpage frame.  *That is you can move your mouse 
right off the link and onto a adjacent widget.*

3) When moving your mouse over the link you will notice 
information in the lower left corner of the browser. 
(email to: etc...)

4) Try scrolling off the link and onto konqueror's widget 
frame.  The infomation will remain on the lower left 
corner until you scroll over some other part of the html 
document.


(submitted via bugs.kde.org)
Comment 1 Stephan Binner 2002-02-08 17:07:16 UTC
Reproducible with HEAD.
Comment 2 Maksim Orlovich 2003-05-24 02:56:12 UTC
*** Bug 58869 has been marked as a duplicate of this bug. ***
Comment 3 Icekiss 2003-11-15 13:23:07 UTC
reproducable with CVS Head from 3.11.03
Comment 4 Rainer Endres 2004-04-06 10:57:50 UTC
Reproducable with KDE CVS ( 5. April 2004 )
Comment 5 Rainer Endres 2005-01-27 22:22:32 UTC
Reproducable with KDE CVS (2005-01-25)
Comment 6 James Ots 2005-05-16 16:56:24 UTC
Needs to call resetHoverText when a Leave event is received. Too complicated for me though!
Comment 7 Ian Ventura-Whiting 2006-08-29 13:58:36 UTC
Can that be left as a feature. I find it quite useful.
Comment 8 Martin Koller 2006-12-29 19:55:41 UTC
SVN commit 617626 by mkoller:

BUG: 17846

reset hover text when mouse leaves khtml view


 M  +4 -1      khtmlview.cpp  


--- branches/KDE/3.5/kdelibs/khtml/khtmlview.cpp #617625:617626
@@ -1820,8 +1820,11 @@
 	}
     }
 
-    if ( e->type() == QEvent::Leave && d->cursor_icon_widget )
+    if ( e->type() == QEvent::Leave ) {
+      if ( d->cursor_icon_widget )
         d->cursor_icon_widget->hide();
+      m_part->resetHoverText();
+    }
 
     QWidget *view = viewport();