BUG: 17846

reset hover text when mouse leaves khtml view

svn path=/branches/KDE/3.5/kdelibs/; revision=617626